<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<android.support.v7.widget.RecyclerView
		android:id="@+id/offer_list"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />

	<android.support.design.widget.FloatingActionButton
		android:id="@+id/fabbutton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:layout_margin="16dp"
		app:backgroundTint="@color/colorPrimary"
		app:borderWidth="0dp"
		app:elevation="4dp"
		app:layout_collapseMode="pin"
		app:pressedTranslationZ="6dp"
		android:visibility="gone" />

	<TextView
		android:id="@+id/noOffersView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:text="@string/no_offers"
		android:textSize="20sp"
		android:textColor="@color/colorAccent"
		android:layout_centerInParent="true"
		android:visibility="gone" />

</RelativeLayout>
