<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_settings"
          android:title="@string/settings"
          android:icon="@drawable/ic_settings_white_24dp"
          app:showAsAction="ifRoom|collapseActionView" />
</menu>