<resources>
    <string name="app_name">FindOffers</string>
    <string name="no_offers">No offers available at this time. Please try again after some time.</string>
    <string name="error">Some error occurred. Please try again after some time.</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="hint_application_id">Application Id</string>
    <string name="hint_user_id">User Id</string>
    <string name="hint_token">Token</string>
    <string name="field_mandatory">This field is mandatory</string>
</resources>
